src/index.sass
// 1380
@font-face
	src: url('../public/fonts/San Francisco Pro Text/SF-Pro-Display-Regular.otf') format('truetype')
	font-family: 'SF Pro Display'
	font-weight: 400
	font-style: normal
@font-face
	src: url('../public/fonts/San Francisco Pro Text/SF-Pro-Display-Medium.otf') format('truetype')
	font-family: 'SF Pro Display'
	font-weight: 500
	font-style: normal
@font-face
	src: url('../public/fonts/San Francisco Pro Text/SF-Pro-Display-Semibold.otf') format('truetype')
	font-family: 'SF Pro Display'
	font-weight: 600
	font-style: normal
@font-face
	src: url('../public/fonts/San Francisco Pro Text/SF-Pro-Display-Bold.otf') format('truetype')
	font-family: 'SF Pro Display'
	font-weight: 700
	font-style: normal
a
  text-decoration: none
body
  background: #f5f5f7
  font-family: 'SF Pro Display', system-ui, sans-serif
  margin: 0
  -webkit-font-smoothing: antialiased
  -moz-osx-font-smoothing: grayscale
.headerRight
  cursor: pointer
.wrapper
  background-color: #f5f5f7
header
  background: rgba(0,0,0,0.8)
.header
  display: flex
  justify-content: space-between
  padding: 0 22px
  max-width: 980px
  margin: 0 auto
  div
    display: flex
    align-items: center
.header-store
  color: #f5f5f7
  margin-left: 40px
  font-size: 14px
.content
  position: relative
  max-width: 988px
  margin: 0 auto
  padding-top: 15px
.content-header
  padding-bottom: 15px
  display: flex
  justify-content: flex-end
  button
    font-size: 14px
    margin-right: 20px
    border: none
    background: none
    text-transform: capitalize
    position: relative
    background: #f5f5f7
  button:last-of-type
    margin-right: 10px
  #sorting-button:after
    content: url('../public/media/down-arrow.svg')
    margin-left: 3px
    position: absolute
    bottom: 0
    transition-duration: 300ms
    background: #f5f5f7
    z-index: 100
.items-wrapper
  background-color: rgba(0,0,0,0.8)
  padding: 25px
  border-radius: 10px
  min-height: 100vh
.card
  background-color: white
  width: 26%
  border-radius: 10px
  padding: 25px
  text-align: center
  margin-bottom: 3%
  img
    max-width: 100%
    display: flex
    margin: 0 auto
  p
    margin: 0
  .model-name
    padding-top: 10px
    font-size: 18px
  .tech-spec
    font-size: 12px
    padding: 5px 0
    opacity: 60%
  .buy-button
    border: none
    border: 1px solid white
    color: white
    background: #379afd
    width: 100%
    padding: 8px 0
    border-radius: 6px
    margin-top: 10px
    cursor: pointer
  .buy-button:hover
    background: #0078f0
  .buy-done-button
    border: 1px solid #379afd
    color: #379afd
    background: white
    width: 100%
    padding: 8px 0
    border-radius: 6px
    margin-top: 10px
    cursor: pointer
  .buy-done-button:hover
    color: #0078f0
    border: 1px solid #0078f0
.price-wrapper
  display: flex
  justify-content: space-between
  margin-top: 10px
  font-size: 18px
  span
    span
      opacity: 40%
.card:hover
  .tech-spec
    opacity: 100%
.price-text
  opacity: 60%
.items
  display: flex
  flex-wrap: wrap
  justify-content: flex-start
  gap: 3%
.bag-wrapper
  position: absolute
  background: white
  right: -5vw
  width: 254px
  z-index: 160
  border-radius: 10px
  margin-top: -10px
  padding: 10px
  padding-bottom: 15px
  border: 1px solid rgb(210,210,215)
  div
    width: 100%
  .buy-button
    border: none
    color: white
    background: #379afd
    width: 100%
    padding: 8px 0
    border-radius: 6px
    margin-top: 10px
    cursor: pointer
  .buy-button:hover
    background: #0078f0
  .bag-content
    overflow: auto
    h1
      margin: 0
      font-size: 25px
      text-align: center
      padding: 20px
    .bag-item
      display: flex
      justify-content: space-between
      height: auto
      align-items: center
      padding-bottom: 15px
      margin-bottom: 20px
      border-bottom: 1px solid rgb(210, 210, 215)
      .NamePrice
        display: flex
        flex-direction: column
        justify-content: space-between
        height: 45px
        align-items: center
    img
      height: 65px
      width: auto
      flex-shrink: 0
    span
      font-size: 14px
    svg
      padding: 2px
      border: 1px solid rgb(210,210,215)
      border-radius: 999px
      flex-shrink: 0
      opacity: 35%
    svg:hover
      opacity: 100%
#total
  margin: 0
  display: flex
  justify-content: space-between
  p
    margin: 0
    font-size: 18px
  span
    font-size: 18px
    opacity: 60%
.total-price
  margin: 0
  display: flex
  justify-content: space-between
  p
    margin: 0
    font-size: 18px
  span
    font-size: 18px
    opacity: 60%
code
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
input
  font-family: 'SF Pro Display', system-ui, sans-serif
  width: -webkit-fill-available
  margin-bottom: 15px
  font-size: 18px
  border: 1px solid #379afd
  border-radius: 6px
  padding: 5px 10px
input::placeholder
  color: rgba(0,0,0,0.6)
input:focus
  outline: none
input[type='number']
    -moz-appearance:textfield
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button
    -webkit-appearance: none
.arrowLeft
  padding-bottom: 10px
  cursor: pointer
.spin
  height: 30px
  margin: 40vh auto
  display: flex
.bag-pic
  width: 75%
  display: flex
  justify-content: center
.rotate:after
    transform: rotate(90deg)
.cat-btns
  transition-duration: 500ms
  display: none
  opacity: 0
  transform: translateX(80px)
.trans
  transform: translateX(0)
@media screen and (max-width: 1110px)
  .bag-wrapper
    right: 0
@media screen and (max-width: 988px)
  .items
    gap: 2%
@media screen and (max-width: 883px)
  .items
    gap: 0
    justify-content: space-between
  .card
    width: 40%
@media screen and (max-width: 560px)
  .card
    width: 100%
  .content-header
    flex-direction: column
    div:last-of-type
      margin-top: 10px

